css/styles.css
/* ... */
#ftitle::after { content: ""; position: absolute; bottom: 0px; left: 0px; height: 2px; background-color: rgb(255, 255, 255); width: 0%; transition: width 0.5s ease-out; }
#ftitle:hover::after { width: 100%; }
#text1 span, #intro span, #award-text span, #ftitle span { display: inline-block; opacity: 0; transform: translateY(15px); transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94), cubic-bezier(0.25, 0.46, 0.45, 0.94); transition-property: transform, opacity; transition-duration: 0.7s, 0.7s; }
#social-media li, #branding li, #web-design li, #advertising li { display: block; opacity: 0; transform: translateX(-15px); transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94), cubic-bezier(0.25, 0.46, 0.45, 0.94); transition-property: transform, opacity; transition-duration: 0.7s, 0.7s; }
#text1.animated span, #intro.animated span, #award-text.animated span, #ftitle.animated span { opacity: 1; transform: translateY(0px); }
#social-media.animated li, #branding.animated li, #web-design.animated li, #advertising.animated li { opacity: 1; transform: translateX(0px); }
#award-text { max-width: 610px; display: block; margin-bottom: 50px; }
.bottom_nav { width: 50%; position: sticky; bottom: 3vh; left: 50%; transform: translateX(-50%); pointer-events: none; padding-bottom: 20px; }
.edit_button { position: relative; margin-left: 120%; pointer-events: all; width: 120px; height: 120px; transition: top 0.5s cubic-bezier(0.075, 0.82, 0.165, 1), transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1); }
.edit_button_pencil { display: block; width: 100%; height: 100%; top: 0px; left: 0px; position: absolute; background-image: url("../img/pencil_black.png"); background-size: 100% 100%; background-position: center center; }
.edit_button_text { display: block; width: 100%; height: 100%; transform: scale(1); transition: transform 0.3s, opacity 0.3s; overflow: hidden; }
.edit_button_text::before { content: ""; display: block; background-image: url("../img/text_black.png"); background-size: 100% 100%; background-position: center center; width: 100%; height: 100%; animation: 12s linear 0s infinite normal none running rotation-back; }
.mainBody.animated .edit_button_pencil { background-image: url('../images/pencil_white.png'); }
.mainBody.animated .edit_button_text::before { background-image: url("../img/text_white.png"); }
.edit_button:hover .edit_button_text::before { animation: 1s linear 0s infinite normal none running rotation-back; }
.edit_button:hover .edit_button_text { transform: scale(0); opacity: 0; transition: transform 0.4s linear 0.1s, opacity 0.1s linear 0.1s; }
.edit_button_point { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0); width: 90%; height: 90%; border-radius: 50%; background-color: rgb(0, 0, 0); transition: transform 0.2s ease-out; }
.edit_button:hover .edit_button_point { transform: translate(-50%, -50%) scale(1); }
.mainBody .edit_button:hover .edit_button_pencil { background-image: url('../images/pencil_white.png'); }
.mainBody.animated .edit_button:hover .edit_button_pencil { background-image: url("../img/pencil_black.png") !important; }
.mainBody.animated .edit_button:hover .edit_button_point { background-color: rgb(255, 255, 255); }
.edit_button_overlay { position: fixed; width: 100vw; height: 100vh; background-color: rgb(255, 255, 255); top: 0px; left: 0px; z-index: 1; opacity: 0; transform: scale(0); transition: opacity 0.3s 0.3s, transform 0.01s linear 0.7s; }
.edit_button_overlay.actived { transform: scale(1); transition: opacity 0.2s; opacity: 1; }
.box { width: 50%; margin: 0px auto; }
.container { position: relative; margin-bottom: 100px; }
.customer { margin: 0px; padding: 0px; list-style: none; display: flex; flex-wrap: wrap; }
.customer li { width: 25%; box-sizing: border-box; }
.customer img { display: block; max-width: 100%; max-height: 150px; margin: 0px auto; }
.black { background-color: transparent; padding: 80px 0px 50px; }
.container-box-flex { display: flex; min-height: 80vh; flex-direction: column; }
.box-flex { display: flex; margin: auto; }
.box-flex-left { width: 30.5%; margin-right: 7%; }
.box-flex-left h2 { margin-top: 22px; }
.box-flex-right { width: 62.5%; }
.box-works { flex-wrap: wrap; display: flex; }
.work { width: 40%; margin: 0px 10% 5% 0px; }
.work h3 { font-weight: 400; margin: 0px 0px 15px; white-space: nowrap; }
.work ul { padding: 0px; margin: 0px auto; list-style: none; }
.box-header span { display: inline-block; }
.cursor { }
.cursor__inner { pointer-events: none; position: absolute; top: 0px; left: 0px; border-radius: 70%; mix-blend-mode: difference; will-change: opacity; backface-visibility: hidden; z-index: 100001; }
body .cursor-dot { width: 20px; height: 20px; background-color: rgb(255, 255, 255); backface-visibility: hidden; }
body .cursor-circle { width: 35px; height: 35px; border: 2px solid rgb(255, 255, 255); backface-visibility: hidden; }
body.animated .cursor-dot { background: rgb(255, 255, 255); }
body.animated .cursor-circle { border: 2px solid rgb(255, 255, 255); }
.box-topnav { width: 65%; margin: 0px auto; }
#logo img { width: 100px; z-index: 1; }
.no-wrap { display: inline-block; white-space: nowrap; }
.customer-awwwards li { position: relative; font-family: "Manrope", sans-serif; font-size: 3em; }
body .customer-awwwards li span { position: absolute; z-index: -1; top: -15px; right: 7%; color: rgba(30, 30, 30, 0.5) !important; }
body.animated .customer-awwwards li span { color: rgb(30, 30, 30) !important; }
footer { display: flex; min-height: 99vh; flex-direction: column; box-sizing: border-box; }
footer .box { display: flex; flex-direction: column; box-sizing: border-box; min-height: 80vh; }
.top_footer, .bottom_footer { margin-top: auto; }
.top_footer span { display: block; margin-top: 20px; }
footer .container { padding: 30px 0px; margin: auto 0px; min-height: 80vh; box-sizing: border-box; }
.box-title h1 { display: inline-block; }
/* ... */

